1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* WindowGeometryRecord.m ([WindowGeometryRecord
	-setWindowGeometry:]): Use create:setC: instead of two calls.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libtkobjc_la_SOURCES,
	libtkobjc_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New variables.
	Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.

	* internal.m: Declare raster_private_t.
	(tkobjc_raster_create): New function.
	(tkobjc_raster_erase, tkobjc_raster_fillRectangle,
	tkobjc_raster_ellipse, tkobjc_raster_line,
	tkobjc_raster_rectangle, tkobjc_raster_drawPoint,
	tkobjc_raster_createContext, tkobjc_raster_setColormap,
	tkobjc_raster_createPixmap, tkobjc_raster_setBackground,
	tkobjc_raster_flush, tkobjc_raster_savePixmap, tkobjc_raster_copy,
	tkobjc_pixmap_create, tkobjc_pixmap_draw): Indirect gc, pm, oldpm,
	tkwin through private.

	* internal.h: Declare tkobjc_raster_create.

	* Raster.h: Don't include internal.h.
	(Raster): Declare only private (not pm, oldpm, tkwin and gc).

	* Raster.m ([Raster -createEnd]): Use tkobjc_raster_create,
	instead of using Tk functions directly.

1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* win32dib.[ch]: Include contents only if _WIN32.

	* Graph.m: Include collections.h.

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* ArchivedGeometryWidget.m: Add phase tags.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Button.m, ButtonPanel.m, Canvas.m, CanvasAbstractItem.m,
	CanvasItem.m, CheckButton.m, Circle.m, ClassDisplayHideButton.m,
	ClassDisplayLabel.m, Colormap.m, CompleteProbeDisplayLabel.m,
	CompositeItem.m, Entry.m, Form.m, Frame.m, Graph.m, Histogram.m,
	InputWidget.m, Label.m, Line.m, LinkItem.m, MessageProbeEntry.m,
	NodeItem.m, OvalNodeItem.m, Pixmap.m, ProbeCanvas.m, Raster.m,